<resources>

    <string name="settings_Me">Me</string>
    <string name="set_Me">John Doe</string>
    <string name="settings_Notifications">Notifications</string>
    <string name="set_Notifications">All</string>
    <string name="settings_General">General</string>
    <string name="set_General">Access</string>
    <string name="settings_Account">Account</string>
    <string name="set_Account">john.doe@mail.com</string>
    <string name="settings_Privacy">Privacy</string>
    <string name="set_Privacy">Only me</string>
    <string name="settings_Data">Data</string>
    <string name="set_Data">12 MB</string>
    <string name="settings_Help">Help</string>
    <string name="set_Help">Questions?</string>

    <string name="privacy_header">Privacy Policy</string>
    <string name="terms_of_use_header">Terms of Use</string>


    <string name="signup_Text">Not a member?</string>
    <string name="signup_Link">Signup.</string>
    <string name="login_username">Username</string>
    <string name="login_pass">Password</string>
    <string name="login_pass_text">Forgot your password?</string>
    <string name="login_Link">Recover now.</string>
    <string name="logo_text">JAMAICA AUTO LOAN INFORMATION </string>
    <string name="logo_text2">AUTO LOAN INFORMATION </string>
    <string name="login_text">Start</string>
    <string name="logo_description">Logo</string>
    <string name="LoanDetails">Loan Details</string>
    <string name="password_strength_caption">Password Strength: {0}</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>


    <string name="app_name">Loan Hub</string>
    <string name="email_address">info@loanhub.com</string>
    <string name="head_institution">Institution</string>
    <string name="welcome_app_started">Welcome to Loan Hub!</string>
    <string name="welcome_app_resume">Welcome back!</string>
    <string name="instructions_main_actvity_1">Please fill in all the fields for maximum experience.</string>
    <string name="instructions_enter_first_name_hint">First Name</string>
    <string name="instructions_enter_last_name">Please enter your first name.</string>
    <string name="instructions_enter_last_name_hint">Last Name</string>
    <string name="instructions_city_hint">City</string>
    <string name="instructions_parish_hint">Parish</string>
    <string name="Submit">Submit</string>
    <string name="search_here">Search Bank</string>
    <string name="startUpButton">CONNECT TO THE HUB</string>
    <string name="startActivityLoanString">LOAN</string>
    <string name="sign_up">Sign up</string>
    <string name="instructions_enter_username_hint">Username</string>
    <string name="instructions_enter_email_hint">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="instructions_sex_hint">Sex</string>
    <string name="instructions_enter_dob_hint">Date of Birth</string>
    <string name="instructions_enter_money_hint">Salary</string>
    <string name="instructions_enter_primaryBank_hint">Primary Bank</string>
    <string name="instructions_enter_loanType_hint">Loan Type</string>
    <string name="instructions_enter_loan_Amount_hint">Loan Amount</string>
    <string name="instructions_enter_occupation_hint">Occupation</string>
    <string name="instructions_credit_hint">Credit Score</string>

    <string-array name="cities">
        <item name="Kingston">Kingston</item>
        <item name="Portmore">Portmore</item>
        <item name="Montego Bay">Montego Bay</item>
        <item name="Spanish Town">Spanish Town</item>
        <item name="May Pen">May Pen</item>
        <item name="Mandeville">Mandeville</item>
        <item name="Old Harbour">Old Harbour</item>
        <item name="Savanna-la-Mar">Savanna-la-Mar</item>
        <item name="Ocho Rios">Ocho Rios</item>
        <item name="Port Antonio">Port Antonio</item>
        <item name="Linstead">Linstead</item>
        <item name="Saint Ann\&apos;s Bay">Saint Ann\&apos;s Bay</item>
        <item name="Morant Bay">Morant Bay</item>
    </string-array>

    <string-array name="parishes">
        <item name="Hanover">Hanover</item>
        <item name="Saint Elizabeth">Saint Elizabeth</item>
        <item name="Saint James">Saint James</item>
        <item name="Trelawny">Trelawny</item>
        <item name="Westmoreland">Westmoreland</item>
        <item name="Clarendon">Clarendon</item>
        <item name="Manchester">Manchester</item>
        <item name="Saint Ann">Saint Ann</item>
        <item name="Saint Catherine">Saint Catherine</item>
        <item name="Saint Mary">Saint Mary</item>
        <item name="Kingston">Kingston</item>
        <item name="Portland">Portland</item>
        <item name="Saint Andrew">Saint Andrew</item>
        <item name="Saint Thomas">Saint Thomas</item>
    </string-array>

    <string-array name="sex">
        <item name="Female">Female</item>
        <item name="Male">Male</item>
    </string-array>


    <string-array name="rating">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>

    </string-array>

    <string name="title_activity_loan_detail">LoanDetail</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="image_of_the_instittution">Image of the instittution</string>
    <string name="institution">Institution</string>
    <string name="slogan">Slogan</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="loan_name">Loan Name</string>
    <string name="interest_rate">Interest rate</string>
    <string name="repayment">Repayment</string>
    <string name="branchNear">Branch near you</string>
    <string name="more">More</string>
    <string name="interestRateDetails">Interest Rate: </string>
    <string name="termsToRepayLoanInDetail">Terms to repay: </string>
    <string name="instructions_rating_hint">rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IdentificationSection">IDENTIFICATION</string>
    <string name="item1Identification">Sample data</string>
    <string name="section_2">EMPLOYMENT</string>
    <string name="characterSection">CHARACTER</string>
    <string name="vehicleSection">VEHICLE</string>
    <string name="search">Search</string>
</resources>