<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow_white"
            android:layout_width="30dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036"
            app:srcCompat="@drawable/back_arrow_white" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

    </LinearLayout>





    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/usr_username"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/main_dark_grey"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/usr_password"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/button"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_pass"
        android:textColorHint="@color/main_dark_grey"
        android:textAlignment="center"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/login_pass_text"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView6"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/login_Link"
        android:textColor="@color/purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.403" />


    <Button
        android:id="@+id/main_login_btn"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button2"
        android:text="@string/login_text" />



</LinearLayout>