<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textColor="#4e525e"
        android:textSize="40dp"
        android:textStyle="bold"
        android:translationX="30dp" />

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="20dp"
        android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                app:tint="#2699fb"
                android:layout_width="40dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_Me"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_user_name"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/set_Me"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_notifications_24"
                app:tint="#2699fb"
                android:layout_width="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_Notifications"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/set_Notifications"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_settings_24"
                app:tint="#2699fb"
                android:layout_width="40dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_General"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/set_General"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_person_24"
                app:tint="#2699fb"
                android:layout_width="40dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_Account"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_user_email"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/set_Account"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_lock_24"
                app:tint="#2699fb"
                android:layout_width="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_Privacy"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/set_Privacy"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_block_24"
                app:tint="#2699fb"
                android:layout_width="40dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_Data"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/set_Data"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="#f1f9ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_help_24"
                app:tint="#2699fb"
                android:layout_width="40dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_Help"
                android:textColor="#2699fb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/set_Help"
                android:textColor="#2699fb" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="360dp"
            android:layout_height="70dp"
            android:backgroundTint="#a51c0b"
            android:text="RESET DATA" />
    </RelativeLayout>

    </LinearLayout>
    </ScrollView>



</LinearLayout>