<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanInDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Loan Name"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/avenirnextbold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/scotiabank"
                android:contentDescription="@string/image_of_the_instittution">

            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/institution"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/avenirnextbold">

                </TextView>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/slogan"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/avenirnextbold">

                </TextView>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="Email"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/avenirnextbold">

                </TextView>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="Phone"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/avenirnextbold">

                </TextView>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="Website"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/avenirnextbold">

                </TextView>




            </LinearLayout>


        </LinearLayout>

    </LinearLayout>





</ScrollView>